// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedElementEnlarged renders with default values 1`] = `
<body>
  <div>
    <path
      d="M 1 0 A 1 1 0 0 1 0 1 L 0 2 L 1 2 A 1 1 0 0 0 2 1 L 2 0 Z"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged renders with the given parameters 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 150 150 A 50 50 0 0 1 100 200 L 100 280 L 160 280 A 70 70 0 0 0 230 210 L 230 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter class is modified 1`] = `
<body>
  <div>
    <path
      class="curve"
      d="M 150 150 A 50 50 0 0 1 100 200 L 100 280 L 160 280 A 70 70 0 0 0 230 210 L 230 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter cx is modified 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 90 150 A 50 50 0 0 1 40 200 L 40 280 L 100 280 A 70 70 0 0 0 170 210 L 170 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter cy is modified 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 150 40 A 50 50 0 0 1 100 90 L 100 170 L 160 170 A 70 70 0 0 0 230 100 L 230 40 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 150 150 A 50 50 0 0 1 100 200 L 100 280 L 160 280 A 70 70 0 0 0 230 210 L 230 150 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter radius is modified 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 140 150 A 40 40 0 0 1 100 190 L 100 270 L 160 270 A 60 60 0 0 0 220 210 L 220 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter side is modified 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 150 150 A 50 50 0 0 1 100 200 L 100 240 L 160 240 A 30 30 0 0 0 190 210 L 190 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 150 150 A 50 50 0 0 1 100 200 L 100 280 L 160 280 A 70 70 0 0 0 230 210 L 230 150 Z"
      fill="red"
      stroke="blue"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter strokeWidth is modified 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 150 150 A 50 50 0 0 1 100 200 L 100 280 L 160 280 A 70 70 0 0 0 230 210 L 230 150 Z"
      fill="red"
      stroke="green"
      stroke-width="3"
      style="fill: #444;"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter style is modified 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 150 150 A 50 50 0 0 1 100 200 L 100 280 L 160 280 A 70 70 0 0 0 230 210 L 230 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      style="fill: #888"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter transform is modified 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 150 150 A 50 50 0 0 1 100 200 L 100 280 L 160 280 A 70 70 0 0 0 230 210 L 230 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(180)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter width is modified 1`] = `
<body>
  <div>
    <path
      class="tile"
      d="M 150 150 A 50 50 0 0 1 100 200 L 100 240 L 160 240 A 30 30 0 0 0 190 210 L 190 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
    />
  </div>
</body>
`;
